# juicy-lemon-iced

./: Cargo.toml  README.md  symbols.json
data/: btcusd.csv
src/: candle.rs  colors.rs  main.rs  mod.rs  symbols.rs  update.rs  utils.rs  view.rs
src/graph/: axis.rs  candle.rs  candle_set.rs  chart.rs  chart_data.rs  chart_renderer.rs  info_bar.rs  mod.rs  y_axis.rs
src/ui/: button.rs  instrument_select.rs  mod.rs  timeframe_select.rs
