[package]
name = "juicy-lemon-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["wgpu"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }